--- a/package.json
+++ b/package.json
@@ -1,35 +1,27 @@
 {
-  "name": "bitaddress.org",
-  "version": "3.3.0",
-  "sha1sum": "6cc839a9f60196e3c5e1ddf6cb9e49ce2ae85cb7",
-  "sha256sum": "dec17c07685e1870960903d8f58090475b25af946fe95a734f88408cef4aa194",
-  "description": "Open Source JavaScript Client-Side Bitcoin Wallet Generator",
-  "main": "Gruntfile.js",
+  "name": "btc-paper-wallet",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "grunt": "~0.4.1",
-    "grunt-combine": "~0.8.3",
-	"grunt-lineending": "~0.2.4"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "15.1.3"
   },
   "devDependencies": {
-	"grunt": "~0.4.1",
-    "grunt-combine": "~0.8.3",
-    "grunt-lineending": "~0.2.4"
-  },
-  "scripts": {
-    "test": ""
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/pointbiz/bitaddress.org.git"
-  },
-  "keywords": [
-    "bitcoin address wallet generator"
-  ],
-  "author": "pointbiz",
-  "license": "MIT",
-  "readmeFilename": "README.md",
-  "gitHead": "d77aaf687fca1f0e28388b0a8de5eb3d89d4fad3",
-  "bugs": {
-    "url": "https://github.com/pointbiz/bitaddress.org/issues"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.3",
+    "@eslint/eslintrc": "^3"
   }
 }
